# openintern

./: .eslintrc.json  .gitignore  MIGRATION.md  Project.md  README.md  README.zh-CN.md  agent.config.example.json  agent.config.json  docker-compose.example.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: Orchestrator_PRD.md  P0-agent-runtime-design.md  development-progress-2026-02-09.md  development-progress-2026-02-10.md  gap-analysis.md  usage.md
python/: pyproject.toml  requirements.txt
python/src/mcp_server/: __init__.py  server.py
python/src/mcp_server/protocol/: __init__.py  mcp.py
python/src/mcp_server/tools/: __init__.py  base.py  memory.py
python/tests/: test_memory_tools.py  test_protocol.py  test_server.py
scripts/: hitl-approval-test.sh  mineru_local_export_to_memu.py  mineru_pdf_export_local.py  mineru_pdf_to_memu.py
src/: index.ts
test/: agent-autonomy-flow.test.ts  agent-loop.test.ts  cli-repl.test.ts  config-loader.test.ts  context-builder.test.ts  cron-service.test.ts  cron-tool.test.ts  feishu-channel.test.ts  filesystem-tools.test.ts  heartbeat-service.test.ts  media-tools.test.ts  memory-consolidator.test.ts  memory-identity.test.ts  memory-tools.test.ts  memu-client.test.ts  message-bus-approval.test.ts  message-bus.test.ts  provider.test.ts  report-issue-tool.test.ts  role-resolver.test.ts  runtime-sqlite.test.ts  skills-loader.test.ts  subagent-manager.test.ts  ui-draft-api.test.ts  ui-runtime-catalog.test.ts  ui-runtime-state.test.ts  web-tools.test.ts  workflow-engine.test.ts  workflow-interpolation.test.ts  (+7 more)
(+444 files in other folders)
